# securicad-enterprise-sdk

./: .gitignore  NOTICE  README.md  RELEASE.md  aws_import_cli.py  dev-requirements.in  dev-requirements.txt  example.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
examples/: README.md  auth.py  conf.ini  requirements.txt  scenario_parser.py  scenario_parser_schema.json  scenario_scheduler.py  utils.py
examples/azure/: default_tunings.json  upload.py
securicad/enterprise/: __init__.py  aws_import_cli.py  client.py  deprecation.py  exceptions.py  metadata.py  model.py  models.py  organizations.py  parsers.py  projects.py  scenarios.py  simulations.py  tunings.py  users.py
securicad/enterprise/util/: __init__.py  parsers.py
tests/: aws.sCAD  awslang.json  config.json  config.schema.json  conftest.py  data.json  data.schema.json  smallAwsModel.sCAD  test_client.py  test_example.py  test_metadata.py  test_models.py  test_organizations.py  test_parsers.py  test_projects.py  test_scenarios.py  test_simulations.py  test_tunings.py  test_users.py  utils.py
tools/git-hooks/pre-commit.d/: format-json.sh
tools/scripts/: run_coverage.sh  run_mypy.sh  run_pylint.sh
