[metadata]
name = securicad-enterprise
version = attr: securicad.enterprise.__version__
author = Foreseeti AB
author_email = tech@foreseeti.com
description = A Python SDK for foreseeti's securiCAD Enterprise
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foreseeti/securicad-enterprise-sdk
license = The Apache Software License, Version 2.0
license_files =
  LICENSE
  NOTICE
keywords =
  securicad
  enterprise
  threat
  modeling
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Security
  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Application Frameworks
  Topic :: Software Development :: Libraries :: Python Modules
  Typing :: Typed

[options]
zip_safe = False
install_requires =
  requests
  securicad-model>=1.0.0,<2.0.0
python_requires = >=3.8
packages =
  securicad.enterprise

[options.extras_require]
dev =
  black
  build
  coverage
  isort
  mypy
  pylint
  pytest
  securicad-aws-collector
  twine
  types-requests

[options.package_data]
securicad.enterprise =
  py.typed
